Fixed nav.sass so that quicklinks dont look weird in new very-white-layout, also fixed some spacing in menu

--- a/application/views/css/base-sass/nav.sass
+++ b/application/views/css/base-sass/nav.sass
@@ -66,16 +66,19 @@
 						&:hover
 							background: #f5f5f5
 
+					.nav-seg-span
+						margin-left: 8px
+
 
 #dojo-quicklink-internal
 	li
 		position: relative
 		&.selected
-			box-shadow: inset 0 0 5px $hard-shadow-color
+			box-shadow: inset 0 0 2px $weak-shadow-color
 			border-radius: 2px 4px  0 0
-			background-color: #ccc
-			border-right: 1px solid $border-color-dark
-			border-left: 1px solid $border-color-dark
+			background-color: #f2f2f2
+			border-right: 1px solid $border-color-light
+			border-left: 1px solid $border-color-light
 
 a
 	&.external
